# sympyentrywidget

./: .gitmodules  LICENSE  README.md  entrywidget.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sympyEntryWidget.py  sympyentrywidget.py  sympyentrywidget_designer_plugin.py
examples/: autocolorlineedit_.py  basic.py  designer.py  designer.ui  entrywidget_.py  image_generator.py  lineedit.py  programmatic.py  summary.py
examples/sympyEntryWidget/: basic.py
sympyEntryWidget/: __init__.py  sympy_widget.py
tests/: __init__.py  test_autocolorlineedit.py  test_conversions.py  test_entrywidget.py  test_funcs.py  test_sympyautocolorlineedit.py  test_sympydimensionedit.py  test_sympyentrywidget.py  test_sympyexpredit.py  test_sympylabellineedit.py  test_sympysymboledit.py  test_sympysymbollineedit.py  test_sympyunitedit.py
tests/math/: test_conversions.py
tests/sympy_widgets/: test_sympyautocolorlineedit.py  test_sympyentrywidget.py  test_sympylabellineedit.py  test_sympysymbollineedit.py
